done with the t-test/lm work

--- a/thursday_office_hours.Rmd
+++ b/thursday_office_hours.Rmd
@@ -44,6 +44,29 @@ d %>%
   ) # this checks out! 
 ```
 
+## Run a t-test 
+
+```{r t-test}
+t_test_result <- t.test(y ~ x, data = d, var.equal = TRUE)
+t_test_result
+```
+
+```{r is it symmetric?}
+diff_in_means <- t_test_result$estimate[1] - t_test_result$estimate[2]
+(t_test_result$conf.int[1] + t_test_result$conf.int[2]) / 2  == diff_in_means
+```
+
+## Run a linear model 
+
+```{r lm}
+lm_result <- lm(y ~ x, data = d)
+lm_result
+
+summary(lm_result)
+```
+
+
+
 
 # Wilcox Rank Sum Tests 
 
